--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -9,7 +9,7 @@
   price: 135
   price-description: per room per night
   saved: 47
-  expires: 2019/05/21
+  expires: 2019/05/29
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90114/892f7996_3f3e_4a5d_8b1b_40cd2eeb8ed2.jpg
   link: https://www.secretescapes.com/the-stratford-stratford-london/sale
   sale-id: 90114
@@ -22,7 +22,7 @@
   price: 179
   price-description: per room per night
   saved: 45
-  expires: 2019/05/21
+  expires: 2019/05/29
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88790/e2367453_a7ff_495d_85d0_b39f995764b9.jpg
   link: https://www.secretescapes.com/vintry-and-mercer-the-city-london/sale
   sale-id: 93680
@@ -35,46 +35,20 @@
   price: 199
   price-description: per room per night
   saved: 22
-  expires: 2019/05/21
+  expires: 2019/05/29
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/58245/221587f5_f5d2_4956_9251_3d871cf1a7fe.jpg
   link: https://www.secretescapes.com/andaz-london-liverpool-street-the-city-london/sale
   sale-id: 93821
-  domestic: true
-
-- title: Homewood
-  id: homewood
-  location: Near Bath, Somerset
-  description: Relax near Bath at a picturesque, award-winning hotel with spa
-  price: 114
-  price-description: per room per night
-  saved: 40
-  expires: 2019/05/21
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/84233/5d05003c_ef14_47dc_bb07_f3cd705601f9.jpg
-  link: https://www.secretescapes.com/homewood-near-bath-somerset/sale
-  sale-id: 93482
-  domestic: true
-
-- title: Una St Ives
-  id: una-st-ives
-  location: Carbis Bay, Cornwall
-  description: A modern lodge at a heavenly Cornish retreat with leisure facilities
-  price: 149
-  price-description: per lodge per night
-  saved: 29
-  expires: 2019/05/21
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90167/209f554f_b8aa_4ea8_88c7_4d3756a5c863.jpg
-  link: https://www.secretescapes.com/una-st-ives-carbis-bay-cornwall/sale
-  sale-id: 93797
   domestic: true
 
 - title: The Principal Edinburgh George Street
   id: the-principal-edinburgh-george-street
   location: Edinburgh, Scotland
   description: A plush Edinburgh stay at a landmark hotel on an iconic street
-  price: 175
+  price: 185
   price-description: per room per night
   saved: 46
-  expires: 2019/05/21
+  expires: 2019/05/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81659/5a772eb6_5214_4753_a3dd_03874291acb1.jpg
   link: https://www.secretescapes.com/the-principal-edinburgh-george-street-edinburgh-scotland/sale
   sale-id: 93828
@@ -83,7 +57,7 @@
 - title: Merchants Manor
   id: merchants-manor
   location: Falmouth, Cornwall
-  description: <div>An adults-only Falmouth spa and foodie stay in a former merchant’s home</div>
+  description: An adults-only Falmouth spa and foodie stay in a former merchant’s home
   price: 75
   price-description: per room per night
   saved: 41
@@ -126,23 +100,10 @@
   price: 149
   price-description: per room per night
   saved: 61
-  expires: 2019/05/21
+  expires: 2019/05/29
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73907/7bca90cf_ec5d_4e72_afc4_5d8750cf04cb.jpg
   link: https://www.secretescapes.com/the-gannet-inn-carbis-bay-cornwall-uk-sale/sale
   sale-id: 93754
-  domestic: true
-
-- title: Grove of Narberth
-  id: grove-of-narberth
-  location: Pembrokeshire, Wales
-  description: A luxe hotel with an acclaimed restaurant in rural Wales
-  price: 149
-  price-description: per room per night
-  saved: 46
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/69121/1a6ffbff_e535_4175_9639_ed562c128089.jpg
-  link: https://www.secretescapes.com/grove-of-narberth-pembrokeshire-wales/sale
-  sale-id: 94309
   domestic: true
 
 - title: The Ampersand Hotel
@@ -179,7 +140,7 @@
   price-description: per room per night
   saved: 42
   expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80044/1384883c_ad99_4700_8c7d_7eea4a694e71.jpg
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80044/abc32c68_aa46_491d_97ec_0fcc17bd70fe.jpg
   link: https://www.secretescapes.com/mottram-hall-mottram-st-andrew-cheshire/sale
   sale-id: 94524
   domestic: true
@@ -190,7 +151,7 @@
   description: A stylish treehouse in a large safari park near the Kent coast
   price: 369
   price-description: per room per night
-  saved: 30
+  saved: 37
   expires: 2019/05/28
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52114/f5dca7f1_1f1c_455f_9771_f98c9ad750a1.jpg
   link: https://www.secretescapes.com/treehouse-hotel-port-lympne-hotel-and-reserve-kent/sale
@@ -227,32 +188,6 @@
 # NON DOMESTIC OFFERS
 ################################################################################
 
-- title: CPH Pevero Hotel
-  id: cph-pevero-hotel
-  location: Sardinia, Italy
-  description: Escape to sun-kissed Sardinia with a stay at a five-star hotel
-  price: 189
-  price-description: per room per night
-  saved: 62
-  expires: 2019/05/20
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/17278/e43ecae6_3668_4fec_bb58_361a8589f81c.jpg
-  link: https://www.secretescapes.com/cph-pevero-hotel-sardinia-italy/sale
-  sale-id: 93454
-  domestic: false
-
-- title: Quality Hotel The Mill
-  id: quality-hotel-the-mill
-  location: Malmö, Sweden
-  description: Explore Malmö in eco-friendly style from a new central hotel
-  price: 62
-  price-description: per room per night
-  saved: 33
-  expires: 2019/05/20
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93048/e85cd150_e290_4617_9ba8_0c1f008758d5.jpg
-  link: https://www.secretescapes.com/quality-hotel-the-mill-malmo-sweden/sale
-  sale-id: 93048
-  domestic: false
-
 - title: Portals Hills Boutique Hotel
   id: portals-hills-boutique-hotel
   location: Mallorca, Spain
@@ -260,36 +195,10 @@
   price: 170
   price-description: per suite per night
   saved: 42
-  expires: 2019/05/20
+  expires: 2019/05/28
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90577/3a0e4e68_b76e_47ae_9708_b4b5c5804ae1.jpg
   link: https://www.secretescapes.com/portals-hills-boutique-hotel-mallorca-portals-nous-spain/sale
   sale-id: 93893
-  domestic: false
-
-- title: Bikini Island & Mountain Hotel Port de Sóller
-  id: bikini-island-and-mountain-hotel-port-de-sóller
-  location: Mallorca, Spain
-  description: Explore Mallorca from cool 1960s-inspired coastal digs
-  price: 98
-  price-description: per room per night
-  saved: 26
-  expires: 2019/05/20
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94158/022d0043_f1ba_4c26_a894_8e65a2e3e77c.jpg
-  link: https://www.secretescapes.com/bikini-island-and-mountain-hotel-port-de-soller-palma-spain/sale
-  sale-id: 94158
-  domestic: false
-
-- title: H10 Palacio Colomera
-  id: h10-palacio-colomera
-  location: Córdoba, Spain
-  description: A sleek new Córdoba hotel with pool and roof terrace in a historic palace
-  price: 73
-  price-description: per room per night
-  saved: 36
-  expires: 2019/05/20
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93925/2284ae36_fbc7_4540_a8e5_baa5f06c064e.jpg
-  link: https://www.secretescapes.com/h10-palacio-colomera-cordoba-spain/sale
-  sale-id: 93925
   domestic: false
 
 - title: H10 Casa de la Plata
@@ -299,8 +208,8 @@
   price: 73
   price-description: per room per night
   saved: 44
-  expires: 2019/05/20
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94159/cff0836f_6ea4_424e_8e23_ba0cf7386994.jpg
+  expires: 2019/05/28
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94159/1bb36bfb_5f56_42cb_b8c6_d16e7460ed4c.jpg
   link: https://www.secretescapes.com/h10-casa-de-la-plata-sevilla-spain/sale
   sale-id: 94159
   domestic: false
@@ -344,26 +253,78 @@
   sale-id: 93826
   domestic: false
 
+- title: Club Maspalomas Suites & Spa
+  id: club-maspalomas-suites-and-spa
+  location: Gran Canaria, Spain, Canary Islands
+  description: Enjoy a coastal Gran Canaria stay at this chic, adults-only spa stay
+  price: 111
+  price-description: per suite per night
+  saved: 29
+  expires: 2019/05/28
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/82821/cb58c3db_64b2_4488_9e78_9178d1cee41d.jpg
+  link: https://www.secretescapes.com/club-maspalomas-suites-and-spa-gran-canaria-spain-canary-islands/sale
+  sale-id: 94249
+  domestic: false
+
+- title: Bahiazul Villas & Club
+  id: bahiazul-villas-and-club
+  location: Fuerteventura, Canary Islands
+  description: An award-winning Fuerteventura villa with private pool and Jacuzzi
+  price: 183
+  price-description: per villa per night
+  saved: 32
+  expires: 2019/05/28
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/77942/d9d8f8f0_0a44_41c1_ace8_002959cb2d72.jpg
+  link: https://www.secretescapes.com/bahiazul-villas-and-club-fuerteventura-canary-islands/sale
+  sale-id: 93891
+  domestic: false
+
+- title: Hotel Gala
+  id: hotel-gala
+  location: Tenerife, Spain
+  description: Tan yourself in Tenerife at a modern Playa de las Américas beach hotel
+  price: 106
+  price-description: per room per night
+  saved: 29
+  expires: 2019/05/28
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93907/ec1c52c2_c6ef_4b77_92f3_0ec36e9c9843.jpg
+  link: https://www.secretescapes.com/hotel-gala-tenerife-spain/sale
+  sale-id: 93907
+  domestic: false
+
+- title: H10 Tindaya
+  id: h10-tindaya
+  location: Gran Canaria, Spain
+  description: Kick back at a Spanish-inspired resort on the shores of Sotavento Beach
+  price: 114
+  price-description: per room per night
+  saved: 38
+  expires: 2019/05/28
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94244/a3b4e9a9_f8cd_4715_8433_312b981ea454.jpg
+  link: https://www.secretescapes.com/h10-tindaya-gran-canaria-spain/sale
+  sale-id: 94244
+  domestic: false
+
 - title: Château Monfort
   location: Milan, Italy
   description: Feel plush at an opulent, five-star Milan hotel with fairy-tale interiors
   price: 74
   price-description: per person. Based on 2 people per room per night
   saved: 45
-  expires: 2019/05/20
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
+  expires: 2019/05/28
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/c3de4ff8_18cb_4184_be33_3402998d7e1a.jpg
   link: https://www.secretescapes.com/chateau-monfort-milan-italy123/sale
   sale-id: 93672
   domestic: false
 
-- title: Vincci Selección Estrella del Mar
-  location: Marbella, Spain
-  description: A glamorous five-star Marbella beach and spa hotel
-  price: 92
+- title: H10 Palacio Colomera
+  location: Córdoba, Spain
+  description: A sleek new Córdoba hotel with pool and roof terrace in a historic palace
+  price: 36
   price-description: per person. Based on 2 people per room per night
-  saved: 34
-  expires: 2019/05/20
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/9544/7aa05624_4417_4f73_ad58_f1e9e4826349.jpg
-  link: https://www.secretescapes.com/vincci-seleccion-estrella-del-mar-marbella-spain/sale
-  sale-id: 93854
+  saved: 36
+  expires: 2019/05/28
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/93925/2284ae36_fbc7_4540_a8e5_baa5f06c064e.jpg
+  link: https://www.secretescapes.com/h10-palacio-colomera-cordoba-spain/sale
+  sale-id: 93925
   domestic: false
